# image_compressor_app

./: .gitignore  Procfile  README.md  app.py  compression_tests.py  compressor.py  requirements.txt  setup.cfg  tester.py  wsgi.py
imgcomp/: __init__.py  app.py  compression_tests.py  compressor.py
imgcomp/static/: style.css
imgcomp/templates/: base.html  compression.html  index.html
static/: style.css
templates/: base.html  compression.html
