[metadata]
name = imgcomp
version = 1.0.0
maintainer = David CN
maintainer_email = onyealidavidcn@gmail.com
description = The basic blog app built in the Flask tutorial.
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask, pillow
